# EncryptedChat

./: CMakeLists.txt  README.md  conanfile.py
app/: exampleMain.cpp  main.cpp
include/gui/: UseImGui.hpp
include/networking/: TcpClient.hpp  TcpConnection.hpp  TcpServer.hpp
src/: main.cpp
src/gui/: UseImGui.cpp  UseImGui.hpp
src/gui/bindings/: imgui_impl_glfw.cpp  imgui_impl_opengl3.cpp
src/networking/: TcpClient.cpp  TcpConnection.cpp  TcpServer.cpp
